add skiko demo